--- a/index.html
+++ b/index.html
@@ -4,30 +4,31 @@
     <title>CPU scheduler simulator</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrap cdn.com/bootstrap/3.4.1/css/bo otstrap.min.css">
-    <script src="https://ajax.googleapis.c om/ajax/libs/jquery/3.7.1/jque ry.min.js"></script>
-    <script src="https://maxcdn.bootstrapc dn.com/bootstrap/3.4.1/js/boot strap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
+<body>  
     <div class="container">
         <h2>CPU scheduler simulator</h2>
     </div>
 
-    <div>
+    <div class="container">
+        <p>L'algoritmo SJF è un algoritmo di scheduling basato sull'assegnare il processore al processo con il tempo di esecuzione minore.</p>
         <button id="idStart" onclick="start()">Start</button>
         <button id="idReset" onclick="reset()">Reset</button>
     </div>
 
     <div>
-        <table class="table" id="idTable"> 
+        <table class="table" id="idTable">
             <thead class="table-light">
                 <tr>
                     <th>Process</th>
                     <th>Irrival Time</th>
                     <th>Burst Time</th>
                     <th>Remaining Burst Time</th>
-                    <th>Priority</th>   
+                    <th>Priority</th>
                 </tr>
             </thead>
             <tbody>
@@ -35,12 +36,12 @@
         </table>
     </div>
 
-    <div id="output" style="display: none"> 
+    <div id="output" style="display: none">
             <p>Di seguito l'evoluzione dei processi: </p>
             <div class="progress">
-                <div class="progress-bar progress-bar-success" role="progressbar" style="width:40%">nome1</div>
-                <div class="progress-bar progress-bar-warning" role="progressbar" style="width:35%">nome2</div>
-                <div class="progress-bar progress-bar-danger" role="progressbar" style="width:25%">nome3</div>
+                <div class="progress-bar progress-bar-success" role="progressbar" style="width:42%">P1</div>
+                <div class="progress-bar progress-bar-danger" role="progressbar" style="width:22%">P3</div>
+                <div class="progress-bar progress-bar-warning" role="progressbar" style="width:36%">P2</div>
             </div>
     </div>
 
