--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <button id="idReset" onclick="reset()">Reset</button>
     </div>
 
-    <div>
+    <div class="container">
         <table class="table" id="idTable">
             <thead class="table-light">
                 <tr>
                     <th>Process</th>
-                    <th>Irrival Time</th>
+                    <th>Arrival Time</th>
                     <th>Burst Time</th>
                     <th>Remaining Burst Time</th>
                     <th>Priority</th>
@@ -36,12 +36,12 @@
         </table>
     </div>
 
-    <div id="output" style="display: none">
+    <div id="output" style="display: none" class="container">
             <p>Di seguito l'evoluzione dei processi: </p>
             <div class="progress">
-                <div class="progress-bar progress-bar-success" role="progressbar" style="width:42%">P1</div>
-                <div class="progress-bar progress-bar-danger" role="progressbar" style="width:22%">P3</div>
-                <div class="progress-bar progress-bar-warning" role="progressbar" style="width:36%">P2</div>
+                <div class="progress-bar progress-bar-success" role="progressbar">P1</div>
+                <div class="progress-bar progress-bar-danger" role="progressbar">P2</div>
+                <div class="progress-bar progress-bar-warning" role="progressbar">P3</div>
             </div>
     </div>
 
